升级系统设计

--- a/scidigitize-ai/docs/design/任务控制中心页面设计.md
+++ b/scidigitize-ai/docs/design/任务控制中心页面设计.md
@@ -1,56 +1,67 @@
-### **GLP-Intelligence Suite 任务控制中心（Study Control Center）** 设计方案：
+# GLP-Intelligence Suite 任务控制中心（Study Control Center）设计方案
+
+**核心隐喻**：这是一个**“自动化流水线监控室”**。用户无需时刻盯着每一个螺丝钉（单元格），只需关注报警红灯（异常）和整体进度。
 
 ---
 
-## **1. 页面布局概览 (UI Layout Overview)**
+## 1. 页面布局概览 (UI Layout)
 
-整个页面采用 **1:3 的非对称分割**。左侧窄栏聚焦于“原材料”的状态，右侧宽栏聚焦于“流水线”的产出。
+*   **左侧：原材料感知区 (Inventory & Parsing)** (宽 25%)
+    *   展示所有上传的 Protocols 和 Raw Data。
+    *   **实时状态灯**：显示文件是否已被 AI 成功解析并结构化。
 
-* **左侧：文件清单与就绪评估 (File Inventory & Status Sidebar)**
-* **定位**：系统的“感知层 (Perception Layer)”，展示助理看懂了什么。
-
-
-* **右侧：任务进度矩阵面板 (Task Matrix Panel)**
-* **定位**：系统的“技能层 (Skills Layer)”，展示虚拟科研助理的工作进度。
-
-
+*   **右侧：任务进度矩阵 (The Task Matrix)** (宽 75%)
+    *   **核心升级**：引入**“泳道折叠 (Swimlane Folding)”**机制，解决长列表的视觉疲劳问题。
 
 ---
 
-## **2. 左侧设计：感知层 (The Perception Sidebar)**
+## 2. 矩阵设计升级：泳道与折叠
 
-这里不只是简单的文件列表，而是**“数据血缘的起点”**。
+为了应对 GLP 报告数十个章节的复杂性，矩阵默认按**章节组 (Section Groups)** 进行折叠。
 
-* **文件分类视图**：
-* **核心方案 (Protocols)**：识别试验标题、给药剂量、动物种属等元数据。
-* **原始数据 (Raw Data)**：展示已上传的 Excel/CSV 列表。
+### **2.1 视图逻辑**
 
-* **实时解析状态 (Live Parsing)**：
-* 每个文件旁有 AI 解析进度的状态指示灯
-* 每个文件下方显示解析备注。*例子*：`batch_01.xlsx` 下面显示 “已匹配章节：1.1，1.2，3.1”，说明该文件已被 **Excel/CSV Mapper** 成功识别并拆分。
+*   **默认视图 (Overview)**：
+    *   显示大标题泳道，如 `1. 摘要 (Summary)`, `2. 方法 (Methods)`, `3. 结果 (Results)`。
+    *   每个泳道显示摘要信息：*“5/5 章节完成，无异常”*。
+*   **展开视图 (Detail View)**：
+    *   点击泳道，展开该组下的具体子章节（如 `3.1 准确度`, `3.2 稳定性`）。
+    *   此时才显示详细的 **章节 x 4阶段 (P1-P4)** 网格。
+
+### **2.2 视觉降噪**
+
+*   **High Confidence (高置信度)**：对于 AI 判定为“高置信度且无异常”的单元格，显示淡绿色，视觉上“后退”。
+*   **Anomalies (异常)**：对于发现逻辑矛盾或超标数据的单元格，显示**高亮红框**，通过视觉“跳出”来吸引用户注意力。
+
+---
+
+## 3. 批量操作：例外管理 (Management by Exception)
+
+这是提升 Power User 效率的关键设计。
+
+### **3.1 一键批准 (Batch Approve)**
+
+*   **场景**：当一个章节组（如“附录”）内的所有 P1 数据映射和 P2 逻辑计算均由系统判定为 Pass 且 Confidence > 98% 时。
+*   **交互**：
+    *   泳道右侧出现 `⚡️ Batch Approve (Safe)` 按钮。
+    *   用户点击后，无需进入详情页，系统自动锁定该组所有单元格的 P1/P2 状态，并自动触发 P3 文稿生成。
+    *   *提示文案*：“已自动批准 12 个高置信度任务。人工复核可随时在详情页进行。”
+
+### **3.2 批量修正 (Batch Correction)**
+
+*   **场景**：当多个章节出现同类错误（如：所有章节的“公司名称”都拼错了）。
+*   **交互**：
+    *   用户在其中一个单元格修正后，系统弹出提示：“检测到其他 5 个章节有类似文本，是否应用全部？”
 
 ---
 
-## **3. 右侧设计：任务进度面板 (The Task Matrix)**
+## 4. 任务锁定与依赖 (Gating & Dependencies)
 
-这是整个系统的“指挥部”，采用**“章节 x 阶段”**的矩阵逻辑。
-
-### **矩阵行列定义：**
-
-* **纵轴（行）**：依据**模板库**固化的章节目录（如：摘要、实验方法、P&A 结果、结论）。
-* **横轴（列）**：四个标准化的 **In Silico 阶段**。
-
-### **各阶段单元格（Cell）的概要信息：**
-
-阶段 (Phase),外部展示的概要信息 (Summary Info),状态预警信号 (Alerts)
-P1: 数据就绪,"显示已匹配的文件图标及数量（如：📄x1, 📊x3）。",⚠️ 缺失关键元数据（如缺少剂量组信息）。
-P2: 事实核对,显示关键计算结论（如：CV<15%）及异常值数量。,🔴 发现 2 处逻辑矛盾或超标数值。
-P3: 文稿生成,显示当前章节的生成进度与初稿字数。,⏳ AI 正在结合 3-5 个范例进行润色。
-P4: 最终审阅,显示批注数量及审阅人签名状态。,✍️ 待专题负责人 (SD) 最终确认。
----
-
-### **“任务锁定” (Task Gating)**
-
-* **逻辑**：只有当左侧的相关原始文件全部解析完成（P1 变绿），右侧该章节的 P2（逻辑计算）才会由灰转蓝激活。这确保了所有的计算都是在受控、可复现的环境下进行的。
+*   **刚性依赖**：P2（计算）必须等待 P1（数据）锁定。
+*   **柔性推荐**：P3（生成）推荐等待 P2 锁定，但允许“草稿预览模式”（Draft Mode），方便用户提前查看大概样子，但在 P2 锁定前无法进行 P4 签署。
 
 ---
+
+## 总结
+
+新的控制中心设计从**“罗列任务”**进化为**“智能筛选任务”**。我们通过折叠和颜色编码，引导用户将宝贵的精力只花在**红色（异常）**和**黄色（低置信度）**的任务上，而让绿色任务自动化流转。
