--- a/scidigitize-ai/docs/design/单元格详情页面设计.md
+++ b/scidigitize-ai/docs/design/单元格详情页面设计.md
@@ -1,148 +1,84 @@
-点击任务矩阵中的单元格进入详情页，是实现“白盒化 AI”最关键的交互。这四个详情页分别对应了从**原始数据**到**审计后报告**的四个关键转化节点。
+# 单元格详情页面设计 (Cell Detail Page)
 
-以下是为您设计的四个阶段详情页（Detail Pages）的设计方案：
+点击任务矩阵中的单元格进入详情页，是实现“白盒化 AI”最关键的交互。为了保证科学家工作的连续性与“心流体验”，我们将原先的四个独立页面重构为**垂直流式页面 (Vertical Progressive Flow)**。
 
----
-
-### **P1 详情页：数据映射校验 (Data Ingestion & Mapping)**
-
-**核心目标**：确认“感知层”是否正确从庞杂的文件池中，找齐了本章节所需的全部“数据契约”字段。
-
-* **视觉布局**：双栏对比。左侧是“数据契约（Data Contract）”要求的字段列表，右侧是关联的“原始文件片段”。
-* **核心功能**：
-* **智能对齐视图**：点击左侧字段（如 `${Batch_01_Mean}`），右侧自动高亮显示对应的 Excel 截图或 PDF 方案原文。
-* **手动修正锚点**：如果 AI 找错了位置，用户可以手动在右侧预览区划选正确的数据范围。
-* **就绪判定**：当所有必须字段（Mandatory Fields）均有来源锚点时，详情页顶部显示“数据已就绪”。
-
-
+核心设计理念：**渐进式展开 (Progressive Disclosure)**。用户无需在页面间频繁跳转，而是像完成一份长试卷一样，顺流而下，上一环节完成后自动展开下一环节。
 
 ---
 
-### **P2 详情页：事实核对工作台 (Fact-Check Workbench)**
+## 1. 页面整体架构
 
-**核心目标**：验证“逻辑左脑”在隔离沙箱中算出的数字是否绝对准确，这是消除幻觉的关键。
+*   **顶部导航栏** (始终悬浮)：
+    *   显示当前章节信息（如：Chapter 2. Precision & Accuracy）。
+    *   **阶段锚点**：P1 (Data) -> P2 (Math) -> P3 (Draft) -> P4 (Review)。点击可快速定位到对应区域。
+    *   **状态指示灯**：每个阶段旁有红/绿灯，实时显示合规状态。
 
-* **视觉布局**：采用 **Hebbia 风格的结构化事实表**。
-* **核心功能**：
-* **计算结果清单**：展示所有经过逻辑计算的值（如 CV%、RE%、P-value）。
-* **异常值高亮**：**GLP-Guardian (合规助理)** 自动对比 NMPA/FDA 指导原则，对超标数据（如 ）进行显著红色标注。
-* **逻辑回溯 (Audit Trail)**：点击数字，下方滑出 **Firecracker MicroVM** 执行的 Python 脚本片段，展示计算公式（如：`Mean = sum(x)/n`），满足审计透明度。
-* **结论确认**：用户点击“确认数字”，该章节的事实库被正式锁定，供下一阶段使用。
-
-
+*   **主体区域**：单一长滚动视图，分为四个折叠面板 (Collapsible Panels)。
 
 ---
 
-### **P3 详情页：文稿生成实验室 (Drafting Lab)**
+## 2. P1 区域：数据映射 (Data Mapping)
 
-**核心目标**：监督“叙述右脑”如何将 P2 的数字转化为符合 SOP 范例的科学语言。
+**定位**：定义数据的来源 (The "Grounding" Layer)。
 
-* **视觉布局**：三段式结构（契约数据 + 范例库 + 生成区）。
-* **核心功能**：
-* **上下文透传**：显示本章节依赖的 P2 事实数据。
-* **范例比对**：展示模板库中预设的 3-5 个参考范例。
-* **原子生成 (Evidence-Anchored Generation)**：点击“生成”，右脑（LLM）基于事实数据和范例即时撰写。
-* **局部编辑**：用户可以直接修改生成的文本。AI 会实时检测：**“您的修改是否违背了 P2 的原始数据？”**（例如：数字是 5.4%，用户手误写成 5.5%，系统将自动纠偏预警）。
-
-
-
----
-
-### **P4 详情页：最终合规评审 (Review & Sign-off)**
-
-**核心目标**：进行全篇视野下的最后把关，并完成法律意义上的电子签名。
-
-* **视觉布局**：**Pixel-Perfect 预览视图**。完全还原 Word 排版、字体、边距和页眉变量。
-* **核心功能**：
-* **全溯源模式 (Traceability Overlay)**：开启后，文档中所有由 AI 生成的数据和段落都会半透明高亮。点击即可看到来自 P1-P3 的全路径溯源。
-* **合规检查清单 (Compliance Checklist)**：自动列出该章节需要遵守的 SOP 条款，逐项勾选。
-* **电子签名 (21 CFR Part 11)**：集成符合法规的签名系统。签名后，该章节进入“只读/锁定”状态，任何后续修改都将留下审计痕迹。
-
-
-
----
-## **四个详情页之间的导航逻辑 (Transition Logic)**
-
-在页面顶部设计一个 **“阶段进度条（Phase Stepper）”**：
-
-1. **线性引导**：用户在 P1 确认完数据映射后，点击“下一步”，页面平滑切换至 P2 进行计算。
-2. **风险阻断**：如果 P2 发现计算不合格（Fail），P3 的“生成”按钮将保持灰色禁用，并在 P2 详情页显示：“存在未确认的异常数值，无法进行文稿生成”。
+*   **默认状态**：展开。
+*   **布局**：
+    *   **左侧：数据契约表**。列出本章节需要的所有变量（如 `LLOQ_Mean`, `IntraBatch_CV`）。
+    *   **右侧：源文件预览窗**。显示关联的 Excel/Word 片段。
+*   **交互逻辑**：
+    *   用户确认左侧每个字段的来源无误。
+    *   当所有必须字段（Mandatory Fields）均就绪（Green Check）后，**P1 区域自动折叠为“摘要模式”，P2 区域自动展开**。
+    *   *摘要模式*：仅显示“来源于 3 个文件：batch_01.xlsx, protocol_v2.pdf... (点击展开)”。
 
 ---
 
-## **四个页面之间的快捷跳转**
+## 3. P2 区域：事实核对 (Fact-Check)
 
-这四个详情页是整个 **GLP-Intelligence Suite** 的核心工作区，它们将原始数据逐步转化为符合法规的科学结论。设计目标是实现**“数据契约（Data Contract）”的闭环验证**。
+**定位**：隔离沙箱中的逻辑计算 (The "Logic" Layer)。
 
----
-
-### **P1 详情页：数据解析与关联 (Data Ingestion & Mapping)**
-
-**核心目标**：建立原始文件与报告变量之间的“血缘关系”。
-
-* **界面布局**：
-* **左侧任务栏**：列出本章节“数据契约”定义的所有必须字段（如：, , ）。
-* **右侧预览区**：显示左侧文件清单中关联的原始 Word/Excel/PDF 实时预览。
-
-
-* **交互特征**：
-* **智能高亮**：点击左侧字段，右侧文档自动滚动并高亮 AI 提取的原始区域。
-* **置信度指示**：AI 提取成功的字段显示绿色勾选；模糊匹配显示橙色感叹号（需人工确认）。
-* **手动校准**：用户可在右侧文档中划选文本/表格区域，直接指派给左侧的特定字段。
-
-
+*   **默认状态**：折叠（待 P1 完成后展开）。
+*   **布局**：**Hebbia 风格结构化表格**。
+    *   列：变量名 | 计算逻辑(公式) | 计算结果 | SOP阈值 | 判定。
+*   **核心功能**：
+    *   **异常高亮**：超标数据（如 CV > 15%）整行标红。用户必须点击“确认异常”并填写理由，或者返回 P1 修改源数据。
+    *   **微虚拟机验证**：点击任何数字，在下方展开 `Firecracker MicroVM` 的执行日志片段，证明该数字的计算过程。
+*   **流转逻辑**：
+    *   当所有数据点被确认（或异常已被合理解释）后，用户点击“锁定事实”。
+    *   **P2 区域折叠，P3 区域自动展开**。
 
 ---
 
-### **P2 详情页：事实核对工作台 (Fact-Check Workbench)**
+## 4. P3 区域：文稿生成与对比 (Drafting & Diff)
 
-**核心目标**：验证“逻辑左脑”在隔离沙箱中执行的计算结果。
+**定位**：将事实转化为文字 (The "Narrative" Layer)。
 
-* **界面布局**：
-* **顶部状态栏**：显示计算脚本版本（如 `Python_BioCalc_v2.1`）及沙箱运行状态。
-* **中部数据表**：**Hebbia 风格的结构化表格**。
-* 列：变量名、计算结果、判定阈值（来自 SOP）、状态（Pass/Fail）。
-
-
-* **底部抽屉（Logic Log）**：点击表格中的数值，下方弹出该数值的**计算逻辑快照**。
-
-
-* **核心功能**：
-* **隔离执行验证**：显示该数字是在 **Firecracker MicroVM** 中通过哪几行代码算出来的，确保计算过程未受 LLM 幻觉干扰。
-* **异常值管理**：**GLP-Guardian (合规助理)** 自动标记超出 SOP 范围的数字（如：），用户必须点击确认或输入偏差说明。
-
-
+*   **布局**：左侧 P2 事实数据（只读引用） | 右侧 文本编辑器。
+*   **核心功能 - 智能对比 (Smart Diff)**：
+    *   AI 生成初稿。
+    *   **数值防篡改**：如果用户手动修改了文中的数字，系统会实时比对 P2 的事实库。
+    *   **Diff 视图**：若用户修改了描述（例如将“符合要求”改为“基本符合”），系统会在侧边显示**“推荐 vs 当前”**的对比，并提示该修改是否偏离了 SOP 范例。
+*   **流转逻辑**：
+    *   定稿后，点击“生成预览”。进入 P4 模式。
 
 ---
 
-### **P3 详情页：文稿生成实验室 (Drafting Lab)**
+## 5. P4 区域：全屏预览与签署 (Review & Sign-off)
 
-**核心目标**：利用“叙述右脑”将验证后的事实转化为专业科学文本。
+**定位**：最终合规把关。
 
-* **界面布局**：
-* **左栏（事实面板）**：显示从 P2 传递过来的已锁定数据 JSON。
-* **中栏（参考范例）**：显示模板库中提供的 3-5 个参考范例（Few-shot Examples）。
-* **右栏（生成/编辑区）**：AI 实时生成的段落预览。
-
-
-* **交互特征**：
-* **原子生成控制**：用户点击“生成”，AI 严格遵循“证据锚定生成（Evidence-Anchored Generation）”策略。
-* **数值防误篡改**：如果用户手动修改生成的文字，系统会实时检测是否修改了关键数值。
-* *逻辑示例*：如果用户将“5.4%”改为“5.5%”，系统会弹出红色预警：“修改后的数值与 P2 事实库不符”。
-
-
+*   **交互**：点击 P3 的完成按钮后，页面进入**“全屏预览模式”**（覆盖掉 P1/P2/P3 的滚动视图）。
+*   **核心功能**：
+    *   **Word 级渲染**：完全还原打印效果。
+    *   **溯源透视镜 (Lineage Lens)**：鼠标悬停在任何段落或数字上，会浮现一个半透明层，显示：
+        *   -> 引用了 P3 的哪段文字
+        *   -> 基于 P2 的哪个计算结果
+        *   -> 来自 P1 的哪个 Excel 单元格
+    *   **电子签名**：底部固定栏输入密码签署。签署后，整个单元格状态变为“Locked”。
 
 ---
 
-### **P4 详情页：合规评审与锁定 (Compliance & Sign-off)**
+## 总结优化点
 
-**核心目标**：最终格式检查与符合 **21 CFR Part 11** 的电子签名。
-
-* **界面布局**：
-* **全屏 Word 预览**：呈现像素级完美的 Word 渲染效果，包括字体、行间距、页码和页眉。
-* **右侧审计侧边栏**：显示本章节的完整**生命周期轨迹**（谁在何时上传了文件、谁确认了计算、AI 何时生成的草稿）。
-
-
-* **核心功能**：
-* **溯源透视模式 (Lineage Overlay)**：点击预览中的任何数字或段落，系统会像“剥洋葱”一样显示其来自哪份文件（P1）、哪个公式（P2）和哪个范例（P3）。
-* **电子签名区**：用户输入账号密码或通过生物识别进行签名。一旦签名，该章节任务在矩阵面板中变为绿色“锁定”状态。
+1.  **心流保持**：科学家不需要在 4 个页面间切来切去，思维是连续的（数据 -> 算 -> 写 -> 审）。
+2.  **上下文保留**：在写 P3 时，只需向上滚动一点就能看到 P2 的计算结果，无需开新窗口。
+3.  **空间效率**：利用“自动折叠”机制，确保屏幕主要区域始终留给当前工作阶段。
