--- a/scidigitize-ai/docs/design/首页设计.md
+++ b/scidigitize-ai/docs/design/首页设计.md
@@ -1,66 +1,74 @@
-## **1. 专题看板 (Study Dashboard) 的按钮逻辑优化**
+# 首页与导航设计 (Homepage & Navigation)
 
-将三个按钮并列是合理的，但在 GLP 业务流中，它们的**权重**和**出现时机**有所不同：
-
-### **三个核心按钮的定位建议：**
-
-* **进入工作台 (Workbench - 核心动作)**：
-* 这是用户每天点击频率最高的地方。建议作为卡片的**首要大按钮（Primary Action）**。
-* **概要信息显示**：在按钮旁应实时显示该专题的任务进度（如：“12/15 章节已锁定”），让用户在进入前就知道工作量。
-
-
-* **配置 (Configure - 初始/管理动作)**：
-* 主要用于指派 **Agent (虚拟科研助理)**、选择**报告模板**以及设定**合规阈值**（如 NMPA 或 FDA 标准）。
-* **建议**：在专题处于“运行中”状态时，此功能应收纳在卡片的右上角或“设置”图标内，防止在生成报告阶段被误触修改。
-
-
-* **历史报告 (History/Artifacts - 审计动作)**：
-* 用于查看已生成的草稿、正式版 PDF 或发送给 QA 的版本。
-* **价值**：这是满足 **Full Traceability (全溯源)** 的重要入口。点击后看到的应该是带时间戳的版本列表。
-
-
+**核心定位**：GLP 实验室的“生产力监控中心 (Productivity Hub)”。
 
 ---
 
-## **2. 标准库 (Standard Library) 的入口设计**
+## 1. 新建专题向导 (Study Setup Wizard)
 
-“黄金标准库”是整个系统的**认知层（Cognition Layer）**，它存储的是公司级的数字资产（SOP、模板、3-5个范例、数据契约）。它不属于任何一个特定的“专题”，而是所有专题的“母本”。
+为了降低上手门槛并确保合规性，新建专题不再是一个简单的模态框，而是一个**分步向导**。
 
-### **建议设计方案：全局侧边栏 (Global Navigation)**
-
-* **设计理由**：
-* **资产与项目隔离**：用户在做项目（专题）时，不应随时修改库；而在维护库时，应专注于标准的统一。
-* **角色权限控制**：通常只有“高级科学家”或“质量主管”有权限进入黄金标准库修改范例，普通研究员只能在专题看板中使用这些资产。
-
-
-* **入口结构建议**：
-* **Dashboard** (活跃专题)
-* **Library** (**标准库**)
-* *Report Templates* (模板管理)
-* *Logic Engines* (计算逻辑/契约管理)
-* *Few-shot Bank* (参考范例库)
-
-
-* **Audit** (全系统审计日志)
-
-
+*   **Step 1: 基础信息 (Basics)**
+    *   输入 Study ID (如 `FOXU-2026-BIO-001`)。
+    *   选择所属项目 (Project Code)。
+*   **Step 2: 资产指派 (Assignment)**
+    *   **选择 Agent**：指派哪位数字专家？(如 `BioAnalyst-Pro v2.1`)。
+    *   **选择模板**：基于哪个从黄金标准库的模板？(如 `NMPA_PK_Report_Template_v5`)。
+*   **Step 3: 合规阈值 (Compliance)**
+    *   **选择法规**：`FDA 21 CFR` 或 `NMPA 2020`。此选择将决定 P2 阶段的红线阈值。
+    *   **设定剔除规则**：是否允许“技术性剔除”？需要哪一级别的审批？
+*   **Step 4: 数据源接入 (Ingestion)**
+    *   上传初始 Protocol 和 Raw Data 文件夹。
 
 ---
 
-## **3. 首页 (Home) 的视觉与逻辑建议**
+## 2. 模拟体验区 (Simulation Sandbox)
 
-既然有了“任务化”的思路，首页不应只是死板的卡片，而应是一个**“生产力监控中心”**。
+针对新入职员工或演示场景，新增 **"Demo Mode"**。
 
-### **布局建议：**
+*   **入口**：首页右下角 floating button "进入模拟实验室"。
+*   **内容**：预置了一个 `Demo_Study_001`。
+    *   P1 故意有一些字段匹配错误。
+    *   P2 故意预埋了 3 个异常值（Outliers）。
+    *   P3 故意生成了一段幻觉文本。
+*   **目标**：引导用户通过实际操作修复这些“预埋炸弹”，低成本学习系统逻辑。
 
-1. **顶部：全局状态 (Status At-A-Glance)**
-* 展示当前正在运行的专题总数、今日待审核的数据点（来自 P2 阶段）、待签发的报告。
+---
 
+## 3. 专题看板 (Study Dashboard)
 
-2. **中部：专题看板列表 (The Grid/List)**
-* **卡片设计**：每个卡片除了你提到的三个按钮，还应显示 **"Data Health"（数据健康度）**。
-* **逻辑**：由 **GLP-Guardian (合规助理)** 扫描，如果某个专题的 P2 阶段出现了严重的数据超标，卡片应显示红色预警，提醒用户优先进入该工作台。
+### **3.1 状态概览 (Status Header)**
 
+*   **今日待办**：`🔴 3 Critical Alerts` (P2 阶段的严重异常)。
+*   **待签发**：`Chanpter 4, 5 (Ready for Sign-off)`。
 
-3. **右侧/底部：快捷操作 (Quick Start)**
-* “新建专题”大按钮。点击后，引导用户选择 Agent 和 模板（即从黄金标准库中指派资产）。
+### **3.2 卡片设计 (Study Cards)**
+
+每一个专题卡片包含：
+
+*   **Header**：Study ID + 进度条 (e.g., "12/15 Sections Locked")。
+*   **Health (数据健康度)**：
+    *   ✅ **Healthy**：所有数据在阈值内。
+    *   ⚠️ **Warning**：存在被剔除的数据点，需关注。
+    *   🔴 **Critical**：存在未解释的逻辑矛盾。
+*   **Actions (快捷操作)**：
+    *   **Workbench** (主按钮)：进入任务控制中心。
+    *   **Config** (齿轮)：修改 Agent 或模板（运行中仅允许有限修改）。
+    *   **History**：查看审计日志。
+
+---
+
+## 4. 全局侧边栏 (Global Navigation)
+
+明确区分“项目空间”与“资产空间”。
+
+*   **Workspaces**
+    *   🏠 **Home** (所有专题)
+    *   📂 **Archives** (已归档专题)
+*   **Knowledge Assets (黄金标准库)**
+    *   📘 **SOPs & Templates** (报告模板)
+    *   🧠 **Logic Engines** (Python 算子库)
+    *   📝 **Few-shot Bank** (范例句式库)
+*   **System**
+    *   🛡️ **Audit Log** (全域审计)
+    *   ⚙️ **Settings**
